--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,22 @@
+<!-- Parse the Latex divs with Katex-->
+<script type="text/javascript">
+  $("script[type='math/tex']").replaceWith(
+    function(){
+      var tex = $(this).text();
+      return "<span class=\"inline-equation\">" + 
+              katex.renderToString(tex) +
+              "</span>";
+  });
+    
+  $("script[type='math/tex; mode=display']").replaceWith(
+    function(){
+      var tex = $(this).text();
+      return "<div class=\"equation\">" + 
+              katex.renderToString("\\displaystyle "+tex) +
+              "</div>";
+  });
+  </script>
+
 <!--   <div class="site-newsletter">
     <div class="container">
       <div class="text-center">
@@ -40,3 +59,4 @@
   </footer>
   
   <script src="{{ site.baseurl }}/js/bundle.js"></script>
+
