--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,4 +7,11 @@
   <title>{{ site.title }} | {{ page.title }}</title>
 
   <link href="{{ site.baseurl }}/css/milo.css" rel="stylesheet">
+
+  <!-- Load jQuery -->
+  <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+  <!-- Load KaTeX -->
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.1.1/katex.min.css">
+  <script src="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.1.1/katex.min.js"></script>
+ 
 </head>
